--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
 name: "leetcode-box"
-author: puiiyuen
+author: yashksaini
 description: "Update a pinned gist to show your LeetCode stats"
 branding:
   icon: code
   color: blue
 runs:
-  using: "node12"
+  using: "node16"
   main: "./index.js"
